--- a/FFT/FFT.ipynb
+++ b/FFT/FFT.ipynb
@@ -115,7 +115,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "id": "580917f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FFT_freq(N, sample_rate):\n",
+    "\n",
+    "    # 采样间隔\n",
+    "    dt = 1 / sample_rate\n",
+    "\n",
+    "    # 频率列表\n",
+    "    freq = np.zeros(N)\n",
+    "\n",
+    "    for k in range(N):\n",
+    "        if k < N // 2:\n",
+    "            freq[k] = k / (N * dt)          # 正频率\n",
+    "        else:\n",
+    "            freq[k] = (k - N) / (N * dt)    # 负频率\n",
+    "\n",
+    "    return freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "ba7e0940",
    "metadata": {},
    "outputs": [
@@ -137,12 +161,11 @@
     "\n",
     "FFT_result = FFT(audio_segment)\n",
     "FFT_magnitude = np.abs(FFT_result)\n",
+    "FFT_freq = FFT_freq(N, sample_rate)\n",
     "\n",
     "# 绘制频谱\n",
-    "freq = np.fft.fftfreq(N, 1/sample_rate)\n",
-    "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(freq[:N//2], FFT_magnitude[:N//2])\n",
+    "plt.plot(FFT_freq[:N//2], FFT_magnitude[:N//2])\n",
     "plt.title(\"FFT Magnitude Spectrum\")\n",
     "plt.xlabel(\"Frequency (Hz)\")\n",
     "plt.ylabel(\"Magnitude\")\n",
@@ -160,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "573097e3",
    "metadata": {},
    "outputs": [
