--- a/FFT/FFT.ipynb
+++ b/FFT/FFT.ipynb
@@ -87,13 +87,16 @@
     "$$\n",
     "X[k] = \\sum_{n=0}^{N-1} x[n] e^{-i \\frac{2 \\pi}{N} k n}\n",
     "$$\n",
+    "\n",
     "IDFT:\n",
     "$$\n",
     "x[n] = \\frac{1}{N} \\sum_{k=0}^{N-1} X[k] e^{i \\frac{2 \\pi}{N} k n}\n",
     "$$\n",
+    "\n",
     "Thus, we have\n",
     "$$\n",
-    "FFT(\\overline{X[k]}) = \\sum_{n=0}^{N-1} \\overline{x[n]} e^{-i \\frac{2 \\pi}{N} k n} = \\overline{\\sum_{n=0}^{N-1} X[k] e^{i \\frac{2 \\pi}{N} k n}} = \\overline{N \\cdot x[n]}"
+    "FFT(\\overline{X[k]}) = \\sum_{n=0}^{N-1} \\overline{x[n]} e^{-i \\frac{2 \\pi}{N} k n} = \\sum_{n=0}^{N-1}\\overline{ X[k] e^{i \\frac{2 \\pi}{N} k n}} = \\overline{N \\cdot x[n]}\n",
+    "$$"
    ]
   },
   {
