--- a/PJ/SVM.ipynb
+++ b/PJ/SVM.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "6fedb509",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from pydub import AudioSegment\n",
-    "import librosa\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
-    "import time\n",
     "from dsp import *"
    ]
   },
@@ -33,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "e6030fed",
    "metadata": {},
    "outputs": [],
@@ -87,9 +84,7 @@
     "\n",
     "    feature = np.concatenate([mfcc_mean, mfcc_std, mfcc_max, mfcc_min])\n",
     "\n",
-    "    return feature\n",
-    "\n",
-    "    # return mfcc_feature"
+    "    return feature"
    ]
   },
   {
@@ -169,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "dc0cda0e",
    "metadata": {},
    "outputs": [],
@@ -206,8 +201,8 @@
     "    print(report)\n",
     "    \n",
     "    # 保存模型和标准化器\n",
-    "    joblib.dump(svm, 'svm_model.pkl')\n",
-    "    joblib.dump(scaler, 'scaler.pkl')\n",
+    "    joblib.dump(svm, 'svm/svm_model.pkl')\n",
+    "    joblib.dump(scaler, 'svm/scaler.pkl')\n",
     "    \n",
     "    return svm, scaler, (X_test_scaled, y_test)"
    ]
